--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:cypress/recommended"
     ]
   },
   "browserslist": {
@@ -38,6 +39,8 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^8.6.0"
+    "@testing-library/cypress": "^8.0.1",
+    "cypress": "^8.7.0",
+    "eslint-plugin-cypress": "^2.12.1"
   }
 }
